--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 }
 
 .btn:hover,
-.btn:active {
+.btn:focus {
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.45);
     transform: scale(1.05) translate(0, -4px);
 }
@@ -156,8 +156,8 @@ header .container,
 
 .nav_link:hover,
 .contact_link:hover,
-.nav_link:active,
-.contact_link:active {
+.nav_link:focus,
+.contact_link:focus {
     color: var(--accent-color);
 }
 
@@ -269,7 +269,7 @@ footer .contact_link {
 }
 
 .navigation_btn:hover,
-.navigation_btn:active {
+.navigation_btn:focus {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     background: var(--accent-color);
     color: var(--accent-heading-color);
@@ -289,7 +289,7 @@ footer .contact_link {
 }
 
 .portfolio_item:hover,
-.portfolio_item:active {
+.portfolio_item:focus {
     transform: scale(1.05) translate(0, -4px);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
